# cpp-engine

./: .gitignore  CMakeLists.txt  README.md
assets/DawnLike/Examples/: Dungeon - Copy.tmx  Dungeon.json  Dungeon.tmx
assets/scripts/: test.lua
assets/shaders/: frag_test.frag
include/Components/: BasicComponents.hpp  ChemistryComponents.hpp
include/Resources/: DialogueScript.hpp  MapLoader.hpp  TextureLoader.hpp  TileManager.hpp
include/Scenes/: GameScene.hpp
include/System/: ChemistrySystem.hpp  ControllerSystem.hpp  EnemySystem.hpp
include/UI/: ControllableView.hpp  DialogueWindow.hpp  InventoryWindow.hpp
include/World/: DijkstraMap.hpp  Map.hpp  Pathfinding.hpp
src/: Main.cpp
src/Resources/: DialogueScript.cpp  MapLoader.cpp  TextureLoader.cpp  TileManager.cpp
src/Scenes/: GameScene.cpp
src/System/: ChemistrySystem.cpp  ControllerSystem.cpp  EnemySystem.cpp
src/UI/: ControllableView.cpp  DialogueWindow.cpp  InventoryWindow.cpp
src/World/: DijkstraMap.cpp  Map.cpp
